[project]
name = "MQE"
version = "0.0.3"
description = "Implementation of Multistep Quasimetric Estimator"
authors = [
    { name = "Phil Wang", email = "lucidrains@gmail.com" }
]
readme = "README.md"
requires-python = ">= 3.10"
license = { file = "LICENSE" }
keywords = [
    'artificial intelligence',
    'deep learning',
    'goal directed reinforcement learning'
]

classifiers=[
    'Development Status :: 4 - Beta',
    'Intended Audience :: Developers',
    'Topic :: Scientific/Engineering :: Artificial Intelligence',
    'License :: OSI Approved :: MIT License',
    'Programming Language :: Python :: 3.10',
]

dependencies = [
    "einx>=0.3.0",
    "einops>=0.8.1",
    "torch>=2.4",
    "torch-einops-utils>=0.1.0",
]

[project.urls]
Homepage = "https://pypi.org/project/MQE/"
Repository = "https://codeberg.org/lucidrains/MQE"

[project.optional-dependencies]
examples = []
test = [
    "pytest",
    "x-mlps-pytorch"
]

[tool.pytest.ini_options]
pythonpath = [
    "."
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = []

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build]
include = [
    "MQE",
    "pyproject.toml",
    "README.md",
    "LICENSE"
]

[tool.hatch.build.targets.wheel]
packages = ["MQE"]
